panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__conditional__test_conditional.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/conditional/test_conditional.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/conditional/test_conditional.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      main~1 `fn(∅: int, argv: ptr<ptr<char>>) -> int`
      (params
         main.unnamed_parameter.0~3 `int`
         argv~4 `ptr<ptr<char>>`)
      (compound-statement
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (subscript (name argv~4 `ptr<ptr<char>>`) 1)
               (conditional
                  0
                  42
                  27)))
         (return
            (conditional
               1
               2
               3)))))

----- stderr -----
