panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__conditional__test_conditional_of_name_exprs.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/conditional/test_conditional_of_name_exprs.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/conditional/test_conditional_of_name_exprs.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (compound-statement
            (declaration x~3 `int` 42)
            (declaration y~4 `int` 27)
            (expression
               (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
                  (string "%d\n")
                  (conditional
                     0
                     (name x~3 `int`)
                     (name y~4 `int`))))
            (expression
               (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
                  (string "%d\n")
                  (conditional
                     1
                     (name x~3 `int`)
                     (name y~4 `int`)))))
         (compound-statement
            (declaration x~5 `short` 42)
            (declaration y~6 `short` 27)
            (expression
               (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
                  (string "%d\n")
                  (conditional
                     0
                     (name x~5 `short`)
                     (name y~6 `short`))))
            (expression
               (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
                  (string "%d\n")
                  (conditional
                     1
                     (name x~5 `short`)
                     (name y~6 `short`)))))
         (compound-statement
            (declaration x~7 `long` 42)
            (declaration y~8 `long` 27)
            (expression
               (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
                  (string "%ld\n")
                  (conditional
                     0
                     (name x~7 `long`)
                     (name y~8 `long`))))
            (expression
               (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
                  (string "%ld\n")
                  (conditional
                     1
                     (name x~7 `long`)
                     (name y~8 `long`))))))))

----- stderr -----
