panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__conditional__test_conditional_only_evaluates_taken_branch.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/conditional/test_conditional_only_evaluates_taken_branch.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/conditional/test_conditional_only_evaluates_taken_branch.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      main~1 `fn(∅: int, argv: ptr<ptr<char>>) -> int`
      (params
         main.unnamed_parameter.0~3 `int`
         argv~4 `ptr<ptr<char>>`)
      (compound-statement
         (expression
            (conditional
               0
               (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
                  (subscript (name argv~4 `ptr<ptr<char>>`) 1)
                  1)
               (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
                  (subscript (name argv~4 `ptr<ptr<char>>`) 1)
                  2)))
         (expression
            (conditional
               42
               (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
                  (subscript (name argv~4 `ptr<ptr<char>>`) 1)
                  3)
               (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
                  (subscript (name argv~4 `ptr<ptr<char>>`) 1)
                  4))))))

----- stderr -----
